# EpicTrace

./: .gitignore  CLAUDE.md  PRODUCT.md  README.md
backend/: pyproject.toml
backend/epictrace/: config.py  db.py  main.py  models.py  schemas.py
backend/epictrace/agent/: answer.py  attachment_paging.py  chat_model.py  citations.py  graph.py  prompts.py  react.py  state.py  tool_probe.py  tools.py
backend/epictrace/api/: app.py  deps.py
backend/epictrace/api/routers/: capture.py  conversations.py  files.py  projects.py  references.py  settings.py  source.py
backend/epictrace/asr/: agreement.py  audio_sources.py  config.py  engine.py  hallucination.py  loop.py  mlx_engine.py  provisioner.py  retranscribe.py  stream_state.py  supervisor.py  text_normalize.py  types.py  word_channel.py  worker.py
backend/epictrace/embedding/: bge_m3.py
backend/epictrace/indexing/: chunker.py
backend/epictrace/interfaces/: audio.py  embedding.py  llm.py  media.py  organizer.py  segmenter.py  transcriber.py  vector_store.py
backend/epictrace/llm/: openai_compat.py
backend/epictrace/media/: __init__.py  docx.py  errors.py  mineru.py  mineru_provisioner.py  mineru_runner.py  pdf.py  pptx.py  provenance.py  text.py
backend/epictrace/retrieval/: attachment.py  dense.py  fuse.py  pipeline.py  rerank.py  sparse.py  types.py
backend/epictrace/services/: budget.py  capture.py  chat.py  errors.py  index.py  ingest.py  organize.py  projects.py  references.py  scan.py  settings.py  source.py
backend/epictrace/vectorstore/: milvus_lite.py
backend/scripts/: asr_eval.py
backend/scripts/rag_eval/: aggregate.py  analyze_gate.py  bringup_addfiles.py  bringup_golden.py  build_calib_sheet.py  calib_score.py  calibration.py  cli.py  config.py  corpus.py  corpus_spec.example.json  corpus_spec.py  debug_agent.py  gen_dump.py  golden.py  indexing.py  judge_cache.py  judge_client.py  judge_workflow.mjs  merge_judged.py  metrics.py  metrics_citation.py  metrics_generation.py  prep_judge_args.py  provenance.py  report.py  review.py  runner.py  runner_generation.py  stats.py  synth.py  wiring.py
backend/tests/: conftest.py  fakes.py  test_agent_citations_reuse.py  test_agent_react.py  test_agent_slow.py  test_agent_tools.py  test_answerability_gate.py  test_api_asr.py  test_api_asr_capture.py  test_api_attachment_cleanup.py  test_api_capture.py  test_api_chat.py  test_api_files.py  test_api_index.py  test_api_projects.py  test_api_references.py  test_api_rename.py  test_api_scan.py  test_api_settings.py  test_asr_agreement.py  test_asr_audio_sources.py  test_asr_config.py  test_asr_deps.py  test_asr_engine.py  test_asr_hallucination.py  test_asr_loop.py  test_asr_provisioner.py  test_asr_retranscribe.py  test_asr_settings_service.py  test_asr_stream_state.py  test_asr_supervisor.py  test_asr_text_normalize.py  test_asr_types.py  test_asr_word_channel.py  test_asr_worker_args.py  test_attachment_paging.py  test_attachment_retrieve.py  test_bge_m3_smoke.py  test_budget.py  test_capture_interfaces.py  (+86 more)
backend/tests/fixtures/rag_eval/: golden.jsonl
docs/reference/: asr-streaming-tuning-notes.md
docs/superpowers/plans/: 2026-06-10-foundation-and-file-ingest.md  2026-06-10-frontend-ia-redesign.md  2026-06-10-plan2-indexing.md  2026-06-11-plan-4-chat-attachments-references.md  2026-06-11-plan-a-chat-attachments-references.md  2026-06-11-plan3-agentic-rag-chat.md  2026-06-12-plan-5-ephemeral-attachment-rag.md  2026-06-12-plan-6-tool-calling-agent.md  2026-06-13-plan-7-mineru-extraction.md  2026-06-14-conv-project-ux.md  2026-06-15-capture-skeleton.md  2026-06-15-extraction-settings.md  2026-06-16-asr.md  2026-06-21-rag-eval-plan-1-deterministic-core.md  2026-06-21-rag-eval.md  (+1 more)
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
shell/: run.py
shell/native/: SystemAudioCapture.swift  build.sh
(+49 files in other folders)
