[project]
name = "epictrace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "pydantic>=2",
  "pywebview",
  "pypdf",
  "python-docx",
  "python-pptx",
  "pymilvus[milvus_lite]",
  "FlagEmbedding",
  # FlagEmbedding 1.4.0 的 reranker 调 tokenizer.prepare_for_model,transformers 5.x 已删除该方法
  # → 钉在 4.x(否则 BGE-reranker compute_score 报 'XLMRobertaTokenizer has no attribute prepare_for_model')。
  "transformers<5",
  "openai",
  "jieba",
  "rank_bm25",
  "langgraph",
  "langchain-openai",
  "sse-starlette",
  # ASR(Plan 9):faster-whisper(带 CTranslate2)在隔离子进程里流式转写;sounddevice
  # 采 mic(需系统 PortAudio);soundfile 把原始 PCM 落 wav。这些只在 ASR 子进程运行期用,
  # 测试套件用 fake / importorskip 不硬依赖它们。
  "faster-whisper",
  "sounddevice",
  "soundfile",
  # 注:MinerU 不进核心环境(几 GB)。它由 MinerUProvisioner 用 uv 装进
  # <data_dir>/.MinerU-venv,运行期子进程调用(见 epictrace/media/mineru*.py)。
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "reportlab"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["epictrace*"]
